--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
                     <path d="M2 17l10 5 10-5" />
                     <path d="M2 12l10 5 10-5" />
                 </svg>
-                <span class="header__title">LearnFlow<span class="header__title-dot">.</span></span>
+                <span class="header__title">Spashta<span class="header__title-dot">.</span></span>
             </div>
             <p class="header__tagline">AI-powered audio explanations from your notes</p>
         </header>
